
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {struct TYPE_5__* rc_override; struct TYPE_5__* inter_matrix; struct TYPE_5__* intra_matrix; struct TYPE_5__* subtitle_header; struct TYPE_5__* extradata; } ;
typedef TYPE_1__ AVCodecContext ;


 int av_freep (TYPE_1__**) ;
 int avcodec_close (TYPE_1__*) ;

void avcodec_free_context(AVCodecContext **pavctx)
{
    AVCodecContext *avctx = *pavctx;

    if (!avctx)
        return;

    avcodec_close(avctx);

    av_freep(&avctx->extradata);
    av_freep(&avctx->subtitle_header);
    av_freep(&avctx->intra_matrix);
    av_freep(&avctx->inter_matrix);
    av_freep(&avctx->rc_override);

    av_freep(pavctx);
}
